# actix_todo

./: Cargo.toml  README.md  build.sh
src/: api.rs  db.rs  main.rs  model.rs
templates/: index.html.tera
