[package]
name = "todo"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-web = "4.9"

dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls"] }
tera = "1.5"
